
syntax = "proto3";

option java_multiple_files = true;
option java_package = "seed";
option java_outer_classname = "SeedProto";

service Seed {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
}

enum AccountStatus {
  OPEN = 0;
  CLOSED = 1;
}

message Account {
  string name = 1;
  string address = 2;
  string ssn = 3;
  AccountStatus status = 4;
}

message CreateAccountRequest {
  Account account = 1;
}

message CreateAccountResponse {
  bool success = 1;
  repeated string errors = 2;
  int64 id = 3;
}
